--- a/Classification_Loss_Function.ipynb
+++ b/Classification_Loss_Function.ipynb
@@ -192,8 +192,8 @@
     "\\left\\{\n",
     "    {\n",
     "    \\begin{array}{lll}\n",
-    "     \\text{Negative} & \\textrm{if } \\hat{p}^\\ip   < 0.5  \\\\\n",
-    "     \\text{Positive}& \\textrm{if } \\hat{p}^\\ip \\ge 0.5 \n",
+    "     \\text{Negative} & \\textrm{if } \\hat{\\mathbf{p}}^\\ip   < 0.5  \\\\\n",
+    "     \\text{Positive}& \\textrm{if } \\hat{\\mathbf{p}}^\\ip \\ge 0.5 \n",
     "    \\end{array}\n",
     "    }\n",
     "\\right.\n",
@@ -214,8 +214,8 @@
     "- Is our model \"better\" when our prediction is \"more certain\" (extreme probability)\n",
     "$$\n",
     "\\begin{array}[lll]\\\\\n",
-    "\\hat{p}^\\ip &  \\approx 1 & \\text{ than when  }       &\\hat{p}^\\ip  = 0.5\\\\\n",
-    "\\hat{p}^\\ip &  = (.5 - \\epsilon) & \\text{ than when  } & \\hat{p}^\\ip  \\approx 0\\\\\n",
+    "\\hat{\\mathbf{p}}^\\ip &  \\approx 1 & \\text{ than when  }       &\\hat{\\mathbf{p}}^\\ip  = 0.5\\\\\n",
+    "\\hat{\\mathbf{p}}^\\ip &  = (.5 - \\epsilon) & \\text{ than when  } & \\hat{\\mathbf{p}}^\\ip  \\approx 0\\\\\n",
     "\\end{array}\n",
     "$$"
    ]
@@ -268,8 +268,8 @@
     "$$\n",
     "\\loss^\\ip_\\Theta =\n",
     "\\begin{cases}\n",
-    "- \\log(\\hat{p}) & \\textrm{if } & \\y^\\ip = 1 \\\\\n",
-    "- \\log(1-\\hat{p})     & \\textrm{if } & \\y^\\ip = 0 \\\\\n",
+    "- \\log(\\hat{\\mathbf{p}}^\\ip) & \\textrm{if } & \\y^\\ip = 1 \\\\\n",
+    "- \\log(1-\\hat{\\mathbf{p}}^\\ip)     & \\textrm{if } & \\y^\\ip = 0 \\\\\n",
     "\\end{cases}\n",
     "$$\n",
     "\n",
@@ -334,7 +334,7 @@
     "Because only one of $\\y^\\ip$ and $(1-\\y^\\ip)$ is non zero, we  can re-write the two-case statement into a single expression\n",
     "\n",
     "$$\n",
-    "\\loss^\\ip_\\Theta = - \\left( \\y^\\ip*\\log(\\hat{p}^\\ip) + (1-\\y^\\ip) * \\log(1-\\hat{p}^\\ip) \\right)\n",
+    "\\loss^\\ip_\\Theta = - \\left( \\y^\\ip*\\log(\\hat{\\mathbf{p}}^\\ip) + (1-\\y^\\ip) * \\log(1-\\hat{\\mathbf{p}}^\\ip) \\right)\n",
     "$$\n",
     "\n",
     "This expression is referred to as *Binary Cross Entropy*; it and the multi-class version\n",
@@ -373,7 +373,7 @@
     "    - All other examples as Negative\n",
     "- Combine the $||C||$ classifiers to produce a vector $\\hat{p}$ of length $||C||$\n",
     "    - normalize across $c \\in C$ to sum to $1$\n",
-    "    - $\\hat{p}_c$ denotes the normalized value for category $c$\n",
+    "    - $\\hat{\\mathbf{p}}_c$ denotes the normalized value for category $c$\n",
     "        - **Notation abuse**: subscripts should be integers, not categories"
    ]
   },
@@ -426,7 +426,7 @@
     }
    },
    "source": [
-    "Cross Entropy can be interpreted as a measure of the \"distance\" between distributions $\\y$ and $\\hat{p}$\n",
+    "Cross Entropy can be interpreted as a measure of the \"distance\" between distributions $\\y$ and $\\hat{\\mathbf{p}}$\n",
     "- Minimized when they are identical\n",
     "- We will use Cross Entropy in the future both as a Loss function and a way of comparing probability distributions"
    ]
