--- a/Classification_and_Non_Numerical_Data.ipynb
+++ b/Classification_and_Non_Numerical_Data.ipynb
@@ -2594,7 +2594,11 @@
     "    # Cross validation\n",
     "    scores = cross_val_score(clf, X_train, y_train, cv=10)\n",
     "    print(\"Model: {m:s} avg cross val score={s:3.2f}\\n\".format(m=name, s=scores.mean()) )\n",
-    "       \n"
+    "       \n",
+    "    # Fit the model using all training data.\n",
+    "    #  cross_val_score does not run the fit on the complete data.\n",
+    "    #  It runs a number of fits, each fit being on the data with one fold held out for validation.\n",
+    "    _= clf.fit(X_train, y_train)\n"
    ]
   },
   {
@@ -2682,12 +2686,14 @@
     "                                    ]\n",
     "                             )\n",
     "    \n",
-    "    _= model_pipeline.fit(train_data, y_train)\n",
-    "    \n",
     "    # Cross validation on the combined pipeline\n",
     "    scores = cross_val_score(model_pipeline, train_data, y_train, cv=10)\n",
     "    print(\"Model: {m:s} avg cross val score={s:3.2f}\\n\".format(m=name, s=scores.mean()) )\n",
-    "       \n"
+    "       \n",
+    "    # Fit the model using all training data.\n",
+    "    #  cross_val_score does not run the fit on the complete data.\n",
+    "    #  It runs a number of fits, each fit being on the data with one fold held out for validation.\n",
+    "    _= model_pipeline.fit(train_data, y_train)\n"
    ]
   },
   {
@@ -3361,11 +3367,15 @@
     "                                    ]\n",
     "                             )\n",
     "    \n",
-    "    _= model_pipeline.fit(train_data, y_train)\n",
-    "    \n",
     "    # Cross validation\n",
     "    scores = cross_val_score(model_pipeline, train_data, y_train, cv=10)\n",
     "    print(\"Model: {m:s} avg cross val score={s:3.2f}\\n\".format(m=name, s=scores.mean()) )\n",
+    "    \n",
+    "    # Fit the model using all training data.\n",
+    "    #  cross_val_score does not run the fit on the complete data.\n",
+    "    #  It runs a number of fits, each fit being on the data with one fold held out for validation.\n",
+    "    _= model_pipeline.fit(train_data, y_train)\n",
+    "\n",
     "   "
    ]
   },
