--- a/Dummy_Variable_Trap.ipynb
+++ b/Dummy_Variable_Trap.ipynb
@@ -474,6 +474,22 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "In short: we were lucky !\n",
+    "\n",
+    "The regularizer that we didn't even know was there saved us.\n",
+    "\n",
+    "Better to be informed than lucky\n",
+    "- that's why we mention the Dummy Variable trap and its solutions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "slide"
     }
    },
