--- a/Index.ipynb
+++ b/Index.ipynb
@@ -182,6 +182,40 @@
     }
    },
    "source": [
+    "# Week 5\n",
+    "\n",
+    "**Plan**\n",
+    "- More models: Decision Trees, Naive Bayes\n",
+    "    - Different flavor: more procedural, less mathematical\n",
+    "    - Decision Trees: a model with *non-linear* boundaries\n",
+    "- Ensembles\n",
+    "    - Bagging and Boosting\n",
+    "    - Random Forests\n",
+    "- Naive Bayes: a simple but effective model\n",
+    "    \n",
+    "- [Entropy, Cross Entropy, and KL Divergence](Entropy_Cross_Entropy_KL_Divergence.ipynb)\n",
+    "\n",
+    "**Decision Trees, Ensembles**\n",
+    "\n",
+    "- [Decision Trees: Overview](Decision_Trees_Overview.ipynb)\n",
+    "- [Decision Trees](Decision_Trees_Notebook_Overview.ipynb)\n",
+    "    - [linked notebook](Decision_Trees.ipynb)\n",
+    "- [Trees, Forests, Ensembles](Ensembles.ipynb)\n",
+    "\n",
+    "**Naive Bayes**\n",
+    "- [Naive Bayes](Naive_Bayes.ipynb)\n",
+    "\n",
+    "**Deeper Dives**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "# Assignments\n",
     "\n",
     "Your assignments should follow the [Assignment Guidelines](assignments/Assignment_Guidelines.ipynb)\n",
