--- a/Prepare_data_Overview.ipynb
+++ b/Prepare_data_Overview.ipynb
@@ -807,7 +807,12 @@
     "\n",
     "# Cross validation\n",
     "scores = cross_val_score(clf, X_train, y_train, cv=10)\n",
-    "print(\"Model: {m:s} avg cross val score={s:3.2f}\\n\".format(m=name, s=scores.mean()) )"
+    "print(\"Model: {m:s} avg cross val score={s:3.2f}\\n\".format(m=name, s=scores.mean()) )\n",
+    "\n",
+    "# Fit the model using all training data.\n",
+    "#  cross_val_score does not run the fit on the complete data.\n",
+    "#  It runs a number of fits, each fit being on the data with one fold held out for validation.\n",
+    "_= clf.fit(X_train, y_train)\n"
    ]
   },
   {
@@ -822,14 +827,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
    "source": [
     "# Combine the transformation pipeline with a final classification step\n",
     "model_pipeline = Pipeline(steps=[ (\"transform\", preprocess_pipeline),\n",
@@ -840,7 +843,11 @@
     "# Cross validation on the combined pipeline\n",
     "scores = cross_val_score(model_pipeline, train_data, y_train, cv=10)\n",
     "print(\"Model: {m:s} avg cross val score={s:3.2f}\\n\".format(m=name, s=scores.mean()) )\n",
-    "       "
+    "\n",
+    "# Fit the model using all training data.\n",
+    "#  cross_val_score does not run the fit on the complete data.\n",
+    "#  It runs a number of fits, each fit being on the data with one fold held out for validation.\n",
+    "_= model_pipeline.fit(train_data, y_train)\n"
    ]
   },
   {
