--- a/Training_Loss.ipynb
+++ b/Training_Loss.ipynb
@@ -213,16 +213,16 @@
     "\\left\\{\n",
     "    {\n",
     "    \\begin{array}{lll}\n",
-    "     \\text{Negative} & \\textrm{if } \\hat{p}^\\ip   < 0.5  \\\\\n",
-    "     \\text{Positive}& \\textrm{if } \\hat{p}^\\ip \\ge 0.5 \n",
+    "     \\text{Negative} & \\textrm{if } \\hat{\\mathbf{p}}^\\ip   < 0.5  \\\\\n",
+    "     \\text{Positive}& \\textrm{if } \\hat{\\mathbf{p}}^\\ip \\ge 0.5 \n",
     "    \\end{array}\n",
     "    }\n",
     "\\right.\n",
     "$$\n",
     "\n",
-    "where, for Logistic Regression,  probability $\\hat{p}^\\ip$ is a function of $\\x^\\ip$ and parameters $\\Theta$.\n",
+    "where, for Logistic Regression,  probability $\\hat{\\mathbf{p}}^\\ip$ is a function of $\\x^\\ip$ and parameters $\\Theta$.\n",
     "$$\n",
-    "\\hat{p}^\\ip = \\sigma( \\Theta^T \\cdot \\x^\\ip )\n",
+    "\\hat{\\mathbf{p}}^\\ip = \\sigma( \\Theta^T \\cdot \\x^\\ip )\n",
     "$$"
    ]
   },
@@ -235,7 +235,7 @@
    },
    "source": [
     "As we observed [before](Classification_Loss_Function.ipynb#Classification:-Loss-function),\n",
-    "- The prediction for example $i$ changes only when probability $\\hat{p}^\\ip$ crosses the threshold.\n",
+    "- The prediction for example $i$ changes only when probability $\\hat{\\mathbf{p}}^\\ip$ crosses the threshold.\n",
     "- Thus: the Performance Metric of Accuracy *won't vary continuously with changes in* $\\Theta$\n",
     "- The **Loss Function** (Cross Entropy) **will** vary continuously with changes in $\\Theta$"
    ]
@@ -263,11 +263,11 @@
     }
    },
    "source": [
-    "A set of parameter values $\\Theta$ which pushes $\\hat{p}^\\ip$ in the right direction\n",
-    "- Increasing $\\hat{p}^\\ip$ for Positive examples $i$\n",
-    "- Increasing  $(1-\\hat{p}^\\ip)$ for Negative examples $i$\n",
+    "A set of parameter values $\\Theta$ which pushes $\\hat{\\mathbf{p}}^\\ip$ in the right direction\n",
+    "- Increasing $\\hat{\\mathbf{p}}^\\ip$ for Positive examples $i$\n",
+    "- Increasing  $(1-\\hat{\\mathbf{p}}^\\ip)$ for Negative examples $i$\n",
     "\n",
-    "is preferred to the set of parameter values $\\Theta'$ which pushes the predicted probability $\\hat{p}^\\ip$\n",
+    "is preferred to the set of parameter values $\\Theta'$ which pushes the predicted probability $\\hat{\\mathbf{p}}^\\ip$\n",
     "in the wrong direction."
    ]
   },
@@ -487,6 +487,24 @@
     }
    },
    "source": [
+    "We can augment examples by repeating them (as above).\n",
+    "\n",
+    "Another method for augmentation is to perturb the example's feature vector in a way that preserves the example's label.\n",
+    "\n",
+    "For example, we may\n",
+    "- add some noise to the feature vector\n",
+    "- Perform data-type specific transformations\n",
+    "    - Images: [shift, rotate, transpose](DataAugmentation/Data_augmentation.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "## Influential points\n",
     "\n",
     "We have described the case where the issue is mis-classification of an important but small sub-class.\n",
@@ -593,7 +611,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0b5d984de1a7492d9d3554b1e3150d7d",
+       "model_id": "43c7c55b34be4ae5b4a25458ab694f26",
        "version_major": 2,
        "version_minor": 0
       },
@@ -625,7 +643,7 @@
     "\n",
     "Observe \n",
     "- Changing $\\y^\\ip$ for $i$ near the middle of the range has little effect on the fit\n",
-    "- Changing $y^\\ip$ for $i$ near either end ($0$ or $9$) has a large effect on the fit"
+    "- Changing $\\y^\\ip$ for $i$ near either end ($0$ or $9$) has a large effect on the fit"
    ]
   },
   {
