--- a/Transformations.ipynb
+++ b/Transformations.ipynb
@@ -1291,13 +1291,24 @@
    },
    "source": [
     "Here's a picture of the \"per example\" indicator\n",
+    "\n",
+    "First, construct an indicator which is true\n",
+    "- if an example's feature $j$ value is equal to the feature $j$ value of example $i$:\n",
+    "\n",
+    "$$\n",
+    "\\text{Is}_{\\x^\\ip_j} = (\\x_j = \\x^\\ip_j)\n",
+    "$$\n",
+    "\n",
+    "Now construct a cross feature that combines the indicators for all $j$ and a single example $i$:\n",
     "$$\n",
     "\\begin{array}[lll]\\\\\n",
-    "\\text{Is}_{\\text{example 1}} & = & (\\x_1 = \\x_1^{(1)}) * (\\x_2 = \\x_2^{(1)})\\\\\n",
-    "\\text{Is}_{\\text{example 2}} & = & (\\x_1 = \\x_1^{(2)}) * (\\x_2 = \\x_2^{(2)})\\\\\n",
-    "\\vdots\n",
+    "\\text{Is}_{\\text{example }i} & = & (\\x_1 = \\x_1^\\ip) * (\\x_2 = \\x_2^\\ip)\\\\\n",
     "\\end{array}\n",
-    "$$"
+    "$$\n",
+    "\n",
+    "This cross feature will be true on example $i$.\n",
+    "\n",
+    "We can construct such a cross feature that recognizes any single example."
    ]
   },
   {
@@ -2743,7 +2754,7 @@
     "width": "370.594px"
    },
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
