--- a/Decision_Trees_Notebook_Overview.ipynb
+++ b/Decision_Trees_Notebook_Overview.ipynb
@@ -154,11 +154,24 @@
    },
    "outputs": [],
    "source": [
-    "import mnist_helper\n",
-    "%aimport mnist_helper\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "from sklearn.model_selection import cross_val_score\n",
-    "from sklearn.dummy import DummyClassifier"
+    "import decision_trees_helper as dthelp\n",
+    "%aimport decision_trees_helper\n",
+    "\n",
+    "import class_helper\n",
+    "%aimport class_helper\n",
+    "\n",
+    "import os \n",
+    "\n",
+    "TITANIC_PATH = os.path.join(\"./external/jack-dies\", \"data\")\n",
+    "\n",
+    "train_data_titanic = pd.read_csv( os.path.join(TITANIC_PATH, \"train.csv\") )\n",
+    "test_data_titanic  = pd.read_csv( os.path.join(TITANIC_PATH, \"test.csv\")  )\n",
+    "\n",
+    "from IPython.display import Image\n"
    ]
   },
   {
@@ -169,16 +182,34 @@
     }
    },
    "source": [
-    "# Baseline models for classification\n",
     "\n",
-    "It's often useful to start off with a \"naive\" model for prediction.\n",
     "\n",
-    "This gives us a \"baseline\" against which we can compare the more sophisticated models that we \n",
-    "endeavor to create.\n",
+    "# Intro and Terminology\n",
     "\n",
-    "What's a good baseline model for the Classification task ?\n",
+    "Decision trees\n",
+    "- Are a structured sequence of questions\n",
+    "- That recursively partitions the universe of possible examples\n",
+    "- May be used for both Classification and Regression tasks\n",
     "\n",
-    "Here are some choices:"
+    "Let's visit the notebook for an [example and terminology](Decision_Trees.ipynb#Decision-Tree-Terminology)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Training\n",
+    "\n",
+    "As you've seen, a Decision Tree is really nothing more than a structured series of questions.\n",
+    "\n",
+    "Thus, the parameters $\\Theta$, which will be discovered by training (as usual), consists of\n",
+    "- A specification of the structure (parent/child relationships)\n",
+    "- An encoding of the \"best\" question to ask at each node\n",
+    "- A class prediction on the leaf nodes"
    ]
   },
   {
@@ -189,10 +220,64 @@
     }
    },
    "source": [
-    "- Most Frequent: always predict the class that occurs most frequently\n",
-    "- Constant: always predict Positive\n",
-    "- Uniform:  predict each class with equal probability (50% for binary case)\n",
-    "- Stratified: predict each class according to empirical distribution"
+    "## High level view\n",
+    "\n",
+    "We start with a high level introduction to the algorithm that constructs a decision tree.\n",
+    "\n",
+    "Let's visit the notebook section on [training](Decision_Trees.ipynb#Training)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Deeper view: creating the test\n",
+    "\n",
+    "At this point we have a rough idea of the algorithm.\n",
+    "\n",
+    "There are still unanswered questions\n",
+    "- How to choose the test/question at each node\n",
+    "- Is there a better point at which to stop ?\n",
+    "\n",
+    "Let's visit the notebook section [Training: a deeper look](Training:-a-deeper-look-at-the-algorithm)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Decision Trees for Regression\n",
+    "\n",
+    "It might seem surprising to use a Classification model (discrete targets) for a Regression task (continuous targets).\n",
+    "\n",
+    "The notebook section [Decision Tree Regression](Decision-Tree-Regression) shows just how to do that."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Overfitting\n",
+    "\n",
+    "If we continue the training algorithm to it conclusion\n",
+    "- We wind up with leaf nodes that are pure (all examples in same category)\n",
+    "- Potentially have leaf nodes with small number of examples\n",
+    "\n",
+    "Thus, the danger of overfitting (poor out of sample generalization) is present.\n",
+    "\n",
+    "Let's go to the notebook for an [example](Decision_Trees.ipynb#Overfitting-example)"
    ]
   },
   {
@@ -203,116 +288,105 @@
     }
    },
    "source": [
-    "Let's see the performance (Accuracy) of each model on the MNIST Binary Classification task\n",
-    "- Predict one particular digits (Positive)\n",
-    "- Versus the 9 other digits (Negative)\n",
-    "\n"
+    "# Hyper parameters\n",
+    "\n",
+    "We can control for the possibility of overfitting\n",
+    "- With hyper-parameters to control various aspects of training\n",
+    "\n",
+    "There are other hyper-parameters than affect performance.\n",
+    "\n",
+    "These hyper-parameters may be adjusted as part of Fine Tuning, or earlier.\n",
+    "\n",
+    "Let's go to the notebook for a quick introduction to [hyper-parameters](Hyper-parameters-for-Decision-Trees)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# The Good and the Bad of Decision Trees\n",
+    "\n",
+    "**The good**\n",
+    "\n",
+    "- Very fast prediction\n",
+    "    - Just a small number of comparisons\n",
+    "- Relatively interpretable\n",
+    "    - Can *explain* why prediction was made\n",
+    "    - Sequence of tests lead to prediction\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "**The bad**\n",
+    "- Prone to overfitting\n",
+    "- Interpretable ?\n",
+    "    - Does the answer to a *long* sequence of tests really clarify the choice ?\n",
+    "    - Explainable rather than understandable\n",
+    "- More procedural/less mathematical\n",
+    "    - Greedy tests: locally optimal but perhaps not globally"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Categorical variables: one more time\n",
+    "\n",
+    "In the Titanic Survival example used in this module\n",
+    "- We treated Pclass (Passenger class) as a categorical rather than a numeric feature\n",
+    "\n",
+    "The test applied by a node in a Decision Tree highlights the difference"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "- Consider Titanic Passenger Class `Pclass` $\\in \\{1,2,3\\}$\n",
+    "- As a numeric, `Pclass` implies an ordering (magnitude doesn't matter for Decision Tree split)\n",
+    "    - The test: $\\lnot (\\text{PClass} \\le 2)$\n",
+    "    - Is True for any example where $\\text{PClass} \\in \\{ 3 \\}$\n",
+    "- As a categorical\n",
+    "    - The test: $\\lnot \\text{Is}_{Pclass=2}$ \n",
+    "    - Is True for any example where $\\text{PClass} \\in \\{ 1, 3 \\}$\n",
+    "\n",
+    "Not the same !"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "The latter is probably what we had in mind, but `Pclass` as numeric does not give us this result.\n",
+    "- Arbitrary encodings are dangerous !  Treat variables with discrete values as categorical."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Retrieving MNIST_784 from cache\n"
-     ]
-    }
-   ],
-   "source": [
-    "mnh_d = mnist_helper.MNIST_Helper()\n",
-    "mnh_d.setup()\n",
-    "\n",
-    "# Turn the 10 class training set into a binary training set\n",
-    "# - Same examples, different targets\n",
-    "# - targets are now \"is 'digit'\" or \"is not 'digit'\" for a single digit\n",
-    "digit = '5'\n",
-    "y_train_d, y_test_d = mnh_d.make_binary(digit)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "stratified: Accuracy = 0.85\n",
-      "uniform: Accuracy = 0.49\n",
-      "most_frequent: Accuracy = 0.91\n",
-      "constant: Accuracy = 0.09\n"
-     ]
-    }
-   ],
-   "source": [
-    "strats = { \"stratified\": {}, \n",
-    "          \"uniform\": {},\n",
-    "          \"most_frequent\": {},\n",
-    "          \"constant\": {\"constant\": True}\n",
-    "         }\n",
-    "    \n",
-    "plt_num = 1\n",
-    "\n",
-    "# Compute Accuracy for various baseline classifiers\n",
-    "for strat, args in strats.items():\n",
-    "    dmy_clf = DummyClassifier(strategy=strat, **args)\n",
-    "    acc_scores_dmy = cross_val_score(dmy_clf, mnh_d.X_train, y_train_d, cv=5, scoring=\"accuracy\")\n",
-    "    \n",
-    "    print(\"{s}: Accuracy = {a:.2f}\".format(s=strat, a=acc_scores_dmy.mean()))\n",
-    "   \n",
-    "  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "Note that we have a highly imbalanced dataset (only approximately 10% Positive examples)\n",
-    "\n",
-    "This explains\n",
-    "- the poor accuracy of the Constant Baseline (should match the 10% of Positive examples)\n",
-    "- the good accuracy of the Most Frequent Baseline (should match the 90% of Negative examples)\n",
-    "- the good accuracy of the Stratified Baseline\n",
-    "\n",
-    "Remember to take the imbalance into account when evaluating the Performance metric."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "If we do a little fitting, we can come up with simple, non-trivial Baseline Models.\n",
-    "\n",
-    "If our \"complicated\" model seems to improve on the simple baseline, then (perhaps) our efforts have\n",
-    "achieved something.\n",
-    "\n",
-    "The Naive Bayes model is a popular baseline."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -360,9 +434,14 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "369.594px"
+   },
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
